--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -1,4 +1,4 @@
-$background-color: #1e293b !global
+$background-color: #0F172A !global
 $foreground-color: #f1f5f9 !global
 
 body, a, section, main
