--- a/src/styles/introduction.sass
+++ b/src/styles/introduction.sass
@@ -1,15 +1,17 @@
 $foreground-color: #f1f5f9 !global
 
 .intro
-  height: 90vh
+  height: 100vh
   display: flex
   flex-direction: column
   justify-content: center
   align-items: flex-start
   max-width: 40em
+
   desc
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
     color: lime
   h1
-    backgorund-color: red
     font-size: 3rem
+  h2
+    font-size: 2rem
