--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -12,8 +12,12 @@ html
 
 
 main
-  padding: 0 5em
+  padding: 0 2em
 
 section
+  padding-top: 4em
   margin: 0 auto
   max-width: 70em
+
+p
+  text-align: justify
