--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,17 +1,28 @@
+$background-color: #0F172A !global
+
 header 
   height: 4em
+  position: sticky
+  top: 0
+  background-color: $background-color
+  padding: 0 2em
+  z-index: 3
+
   nav
+    max-width: 70em
+    margin: 0 auto
     display: flex
     flex-direction: row
     justify-content: flex-end
     width: 100%
     height: 100%
+
     a
       text-decoration: none
     li
       height: 100%
       list-style-type: none
-      margin: auto 2em
+      margin: auto 0 auto 2em
       display: flex
       align-items: center
 
