add content and add some responsiveness

--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -2,7 +2,7 @@ $background-color: #0F172A !global
 $foreground-color: #f1f5f9 !global
 
 .contact
-  height: 100vh
+  margin-bottom: 7em
 
   form
     width: 100%
@@ -23,8 +23,10 @@ $foreground-color: #f1f5f9 !global
 
     .inputBox
       position: relative
+
       input, textarea
         width: 100%
+        box-sizing: border-box
         padding: 1.3rem 1em
         font-size: 1rem
         letter-spacing: 0.062rem
