--- a/src/styles/introduction.sass
+++ b/src/styles/introduction.sass
@@ -1,14 +1,15 @@
 $foreground-color: #f1f5f9 !global
 
 .intro
-  height: 100vh
+  height: 70vh
   display: flex
   flex-direction: column
   justify-content: center
   align-items: flex-start
-  max-width: 55em
+  width: 100%
+  padding-left: 10em
 
-  desc
+  .desc
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
     color: lime
   h1
