--- a/src/styles/accordeon.sass
+++ b/src/styles/accordeon.sass
@@ -9,9 +9,8 @@ $progress-foreground: #4338ca
     .img
       float: left
       box-sizing: border-box
-      width: 10em
-      height: 10em
-      padding: 0.2em
+      height: 8em
+      padding: 0 1em 1em 0
 
       img
         width: 100%
@@ -45,6 +44,7 @@ $progress-foreground: #4338ca
     .first-part
       display: flex
       align-items: center
+      width: 60em
 
       .icon
         width: 2em
