--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -5,18 +5,30 @@ $white: rgb(255, 255, 255)
 $image-height: 5em
 
 .projects
+
   .cards
-    margin: 10em 0
+
+    margin-top: 5em
     display: flex
     justify-content: space-between
-    flex-wrap: wrap
     gap: 0.5em
+
+    @media screen and (min-width: 420px)
+      flex-direction: row
+      flex-wrap: wrap
+    @media screen and (max-width: 420px)
+      flex-direction: column
+
     --mouse-x: 10px
     --mouse-y: 10px
 
     .project
-      flex: 1
-      min-width: 20em
+
+      @media screen and (min-width: 420px)
+        flex: 1
+        min-width: 15em
+      @media screen and (max-width: 420px)
+
       padding: 1em
       height: 18em
       background-color: rgba($white, 0.1)
@@ -47,7 +59,6 @@ $image-height: 5em
 
         .img
           box-sizing: border-box
-          width: 5em
           height: 100%
           padding: 0.2em
 
