fix some styling

--- a/src/styles/introduction.sass
+++ b/src/styles/introduction.sass
@@ -6,13 +6,15 @@ $foreground-color: #f1f5f9 !global
   flex-direction: column
   justify-content: center
   align-items: flex-start
-  width: 100%
   padding-left: 10em
 
   .desc
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
     color: lime
+
   h1
     font-size: 3rem
+    margin-block-end: 0
+
   h2
     font-size: 2rem
