--- a/src/styles/contact.sass
+++ b/src/styles/contact.sass
@@ -1,5 +1,6 @@
 $background-color: #0F172A !global
 $foreground-color: #f1f5f9 !global
+$accent-foreground: #4338ca
 
 .contact
   margin-bottom: 7em
@@ -10,7 +11,7 @@ $foreground-color: #f1f5f9 !global
     .label-focused
       top: -1.125rem
       left: 1em
-      color: #1a73e8
+      color: $accent-foreground
       font-size: 0.75rem
       background-color: $background-color
       height: 1em
@@ -19,7 +20,7 @@ $foreground-color: #f1f5f9 !global
 
     .input-focused
       outline: none
-      border: 0.2em solid #1a73e8
+      border: 0.2em solid $accent-foreground
 
     .inputBox
       position: relative
@@ -31,7 +32,7 @@ $foreground-color: #f1f5f9 !global
         font-size: 1rem
         letter-spacing: 0.062rem
         margin-bottom: 1.875rem
-        border: 0.1em solid #ccc
+        border: 0.1em solid $foreground-color
         background: transparent
         border-radius: 0.4em
         color: $foreground-color
@@ -45,6 +46,8 @@ $foreground-color: #f1f5f9 !global
         color: $foreground-color
         pointer-events: none
         transition: 0.5s
+        @media prefers-reduced-motion
+          transition: none
 
 
       textarea
@@ -82,4 +85,4 @@ $foreground-color: #f1f5f9 !global
         &:hover
           background-color: $background-color
           color: $foreground-color
-          box-shadow: 0 0.1em 0.1em 0 rgba(66, 133, 244, 0.45), 0 0.1em 0.3em 0.1em rgba(66, 133, 244, 0.3)
+          box-shadow: 0 0.1em 0.1em 0 rgba($accent-foreground, 0.45), 0 0.1em 0.3em 0.1em rgba($accent-foreground, 0.3)
