use fontawesome icons, refactor, add running paragraph

--- a/src/styles/footer.sass
+++ b/src/styles/footer.sass
@@ -24,6 +24,9 @@ i
   font-family: "Hack Nerd Font Mono"
   font-style: normal
 
+.icon
+  height: calc(var(--icon-size) - 1em)
+
 .social a
   text-decoration: none
   display: flex
