--- a/src/styles/accordeon.sass
+++ b/src/styles/accordeon.sass
@@ -9,6 +9,7 @@ $accent-foreground: #4338ca
     .img
       float: left
       box-sizing: border-box
+      width: 8em
       height: 8em
       padding: 0 1em 1em 0
 
